# FelzTrace

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: build.yml
docker/: Dockerfile  entrypoint.sh
scripts/: build.sh  check-clang-format.sh  format-code.sh
src/: main.cpp
